<resources>
    <string name="app_name">Simple Note</string>
    <string name="empty_note">Your note list is empty, let add some notes.</string>

    <!-- Menu Item -->
    <string name="menu_item_search">Search</string>
    <string name="menu_item_about_app">About App</string>

    <string name="menu_item_sort">Sort</string>
    <string name="menu_item_sort_by_color">By color</string>
    <string name="menu_item_sort_alphabetically">Alphabetically</string>
    <string name="menu_item_sort_by_create_date">By date</string>

    <string name="menu_item_view">View</string>
    <string name="menu_item_listView">List</string>
    <string name="menu_item_gridView">Grid</string>
    <string name="menu_item_DetailView">Detail</string>

    <string name="menu_item_setting">Setting</string>

    <!-- Navigation drawer Item -->
    <string name="nav_item_calender">Calendar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- About -->
    <string name="about_title">SimpleNote About</string>
    <string name="make_by">App make by\nGroup 8 - Class: CQ17/33</string>
    <string name="members">Members:</string>
    <string name="member_detail">"Trần Phương Nghi: 1712612\nTống Thị Thảo Nguyên: 1712623\nHuỳnh Quỳnh Như: 1712642"</string>
    <string name="about_descrition">"Support android version 8.0 and above\nColorful note, easy to use, to do list, reminder, calender... "</string>
    <string name="version">Version: 1.0.0</string>
</resources>
