<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_bout"
            android:layout_width="match_parent"
            android:layout_marginTop="15dp"
            android:layout_height="@dimen/empty_icon_height"
            app:srcCompat="@drawable/ic_nav" />

    <TextView
        android:id="@+id/tv_about_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        style="@style/TitleTextView"/>

    <TextView
        android:id="@+id/tv_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tv_make_by"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/make_by"
        android:textStyle="bold"
        android:textSize="20dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tv_member"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/members"
        android:textStyle="bold"
        android:textSize="20dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/tv_member_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/member_detail"
        android:gravity="center"/>





</LinearLayout>